--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "eslint": "^8.56.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
