--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
+    "prisma": "^5.8.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
