--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "tsc",
     "dev": "npx tsx watch src/server.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
